- Fixed issues:
	NX-183 (Implemented responsible users for objects)
	NX-900 (Server started during nxdbmgr check forced repair)
	NX-1102 (Implement event groups)
	NX-1199 (SNMP credentials per-zone)
	NX-1219 (Add 'created' and 'last login' columns to User Manager)
	NX-1271 (Implemented internal server topology)
	NX-1386 (Implemented units for Server Variables)


*
* 2.2.4
*

- Fixed issues:
	NX-1208 (Added filter to alarm list)
	NX-1332 (Execution timeout for external parameter provider)
	NX-1337 (Map link color based on object status)
	NX-1346 (Unable to select template group on config export)
	NX-1400 (NetworkMap link can be locked when using bendpoints)
	NX-1404 (No source node in events generated by syslog parser)
	NX-1405 (Agent may crash when parsing Windows event log message)


*
* 2.2.3
*

- Additional information about captured Windows Event Log event passed to the server
- Improved server startup time
- Automatic termination of related alarms when DCI is deleted
- Added attribute "isSTP" to NXSL class "Node"
- File I/O functions in NXSL (disabled by default)
- Sub-second interval between packets can be configured in PING subagent (down to 10 milliseconds)
- Fixed issues:
	NX-1149 (Pass EventRecordID with matched Windows event log record)
	NX-1258 (Option to pass event data from Windows event log to NetXMS event)
	NX-1259 (Added NXSL function - FindAlarmByKeyRegex)
	NX-1363 (Automatic deployment of agent policies)
	NX-1364 (Automatically create nodes for unbound agent tunnels)
	NX-1367 (Fix HP aCC compiler warnings)
	NX-1383 (Minimal interval before generating data collection script error events)
	NX-1389 (If library script saved with compilation errors it disappears from script list)
	NX-1392 (Reload log parser without agent restart)
	NX-1393 (PostgreSQL deadlock on updating raw_dci_data table)
	NX-1398 (Windows Server 2016 not detected correctly)
	NX-1399 (Some SQL queries fail when using MariaDB driver because of MariaDB bug CONC-281)


*
* 2.2.2
*
